--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <a href="https://github.com/LissethFranco" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-github"></i>
         </a>
-        <a href="https://www.linkedin.com/in/nancynsalazar/" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/lisseth-franco-7918b3270/" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-linkedin"></i>
         </a>
         <a href="https://www.instagram.com/lissy1001/?hl=es" target="_blank" rel="noopener noreferrer">
